--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="col-sm-6 text-center">
                 <p class="text-description">
-                    kgghkuih
+                    Hola! Soy Rosa Angelica y en esta pagina te invito a conocer mis habilidades.
                 </p>
                 <form action="">
                     <input type="email" class="form-control rounded-0 my-4 text-center" placeholder="write your email">
