--- a/index.html
+++ b/index.html
@@ -10,21 +10,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img src="img/logotipo.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            LANDING PAGE
+          </a>
+        </div>
+      </nav>
     <Header class="container">
         <div class="row">
             <div class="col-sm-12 my-4"></div>
-            <a href="index.html">
-                <img src="img/logotipo.jpg" alt="Logo" class="logo">
-            </a>
-            <h1 class="titulo text-center display-3 text-uppercase font-weigth-bold mt-4">Landing PAGE</h1>
+            <h1 class="titulo text-center display-3 text-uppercase font-weigth-bold mt-4">Rosa Angelica</h1>
             
             <div class="col-sm-6">
                 <img src="img/imagen-centro.jpg" alt="centro" class="img-fluid">
             </div>
             <div class="col-sm-6 text-center">
                 <p class="text-description">
-                    Hola! Soy Rosa Angelica y en esta pagina te invito a conocer mis habilidades.
+                    Hola! Soy Rosa Angelica y en esta pagina te invito a conocer mi trabajo.
                 </p>
                 <form action="">
                     <input type="email" class="form-control rounded-0 my-4 text-center" placeholder="write your email">
