--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar ">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img src="img/logotipo.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
@@ -24,7 +24,7 @@
             <h1 class="titulo text-center display-3 text-uppercase font-weigth-bold mt-4">Rosa Angelica</h1>
             
             <div class="col-sm-6">
-                <img src="img/imagen-centro.jpg" alt="centro" class="img-fluid">
+                <img src="img/chica1.0.png" alt="centro" class="img-fluid">
             </div>
             <div class="col-sm-6 text-center">
                 <p class="text-description">
@@ -39,7 +39,7 @@
                 <ul class="list-unstyled list-inline mt-4">
                     <li class="list-inline-item">
                         <a href="https://es-la.facebook.com/">
-                            <i class="fab fa-facebook"></i>
+                            <i class="fab fa-facebook-f"></i>
                         </a>
                     </li>
                     <li class="list-inline-item">
