--- a/index.html
+++ b/index.html
@@ -1,67 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap4 Landing </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/69a8324cb7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <nav class="navbar ">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <img src="img/logotipo.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-            LANDING PAGE
-          </a>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bootstrap4 Landing</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/69a8324cb7.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img
+            src="img/logotipo.jpg"
+            alt=""
+            width="30"
+            height="24"
+            class="d-inline-block align-text-top"
+          />
+          LANDING PAGE
+        </a>
+      </div>
+    </nav>
+    <header class="container">
+      <div class="row">
+        <h1
+          class="titulo text-center display-3 text-uppercase font-weigth-bold"
+        >
+          Rosa Angelica
+        </h1>
+      </div>
+      <div class="row" style="margin-top: calc(150px - 10vh)">
+        <div
+          class="
+            col-xs-6 col-sm-8 col-md-6 col-6
+            offset-sm-2 offset-md-0
+            d-flex
+            align-items-center
+          "
+        >
+          <img src="img/chica1.0.png" alt="centro" class="img-fluid" />
         </div>
-      </nav>
-    <Header class="container">
-        <div class="row">
-            <div class="col-sm-12 my-4"></div>
-            <h1 class="titulo text-center display-3 text-uppercase font-weigth-bold mt-4">Rosa Angelica</h1>
-            
-            <div class="col-sm-6">
-                <img src="img/chica1.0.png" alt="centro" class="img-fluid">
+        <div
+          class="
+            col-xs-6 col-sm-8 col-md-6
+            offset-sm-2 offset-md-0
+            d-flex
+            align-items-center
+          "
+        >
+          <div class="text-center">
+            <p class="text-description">
+              Hola! Soy Rosa Angelica y en esta pagina te invito a conocer mi
+              trabajo.
+            </p>
+            <div class="">
+              <form action="" class="">
+                <input
+                  type="email"
+                  class="form-control rounded-0 text-center my-3"
+                  placeholder="write your email"
+                />
+                <button class="btn btn-light rounded-0">SUBSCRIBIRSE</button>
+              </form>
             </div>
-            <div class="col-sm-6 text-center">
-                <p class="text-description">
-                    Hola! Soy Rosa Angelica y en esta pagina te invito a conocer mi trabajo.
-                </p>
-                <form action="">
-                    <input type="email" class="form-control rounded-0 my-4 text-center" placeholder="write your email">
-                    <button class="btn btn-light rounded-0">
-                        SUBSCRIBIRSE
-                    </button>
-                </form>
-                <ul class="list-unstyled list-inline mt-4">
-                    <li class="list-inline-item">
-                        <a href="https://es-la.facebook.com/">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.youtube.com/">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.instagram.com/?hl=es">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://twitter.com/?lang=es">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+            <ul class="list-unstyled list-inline mt-4">
+              <li class="list-inline-item">
+                <a href="https://es-la.facebook.com/">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.youtube.com/">
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.instagram.com/?hl=es">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://twitter.com/?lang=es">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-
-    </Header>
-    
-</body>
+      </div>
+    </header>
+  </body>
 </html>
